<resources>
    <string name="app_name" translatable="false">SportDemon</string>
    <string name="title_home">Home</string>
    <string name="title_add_exercise">Add Exercise</string>
    <string name="title_journal">Journal</string>
    <string name="signup_form_email">Email</string>
    <string name="signup_form_username">Username</string>
    <string name="signup_form_password">Password</string>
    <string name="signup_form_confirm_password">Confirm Password</string>
    <string name="signup_form_back">Back</string>
    <string name="signup_form_submit">Submit</string>
    <string name="home_signup">Signup</string>
    <string name="add_workout">Add Workout</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_form_username">Username</string>
    <string name="login_form_password">Password</string>
    <string name="login_form_title">Log in</string>
    <string name="signup">Don´t have an account? Click here to sign up!</string>
    <string name="ex_combo_title" translatable="false">Deadlift</string>
    <string name="title_of_workout" translatable="false">Workout Title</string>
    <string name="ex_combo_info" translatable="false">40 reps - 3 sets - 200 kg</string>
    <string name="play">PLAY</string>
    <string name="workout_edit">Edit</string>
    <string name="workout_add">Add</string>
    <string name="exercise_name">Exercise name</string>
    <string name="sets">Sets</string>
    <string name="repetitions">Repetitions</string>
    <string name="weight">Weight</string>
    <string name="equipment">Equipment</string>
    <string name="duration_per_set">Duration (per set)</string>
    <string name="rest_between_sets">Rest (between sets)</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="create_workout">Create Workout</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="logout">Log Out</string>
    <string name="passwordWarning">ATTENTION! Do not use your regular passwords, it will be sent and stored in plain text!</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="ECRest">Rest Between Exercises</string>
    <string name="description_of_workout" translatable="false">Description of Workout. Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="remove_workout">Remove workout</string>
    <string name="reps" translatable="false">Reps</string>
    <string name="_1_4" translatable="false">1/4</string>
    <string name="_3_10" translatable="false">3/10</string>
    <string name="number" translatable="false">Number</string>
    <string name="photo">Photo</string>
    <string name="take_photo">Click space below if you want to save a photo!</string>
</resources>
