<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="is.hi.hbvg601.team16.sportdemon.ui.homeactivity.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add_exercise"
        android:name="is.hi.hbvg601.team16.sportdemon.ui.homeactivity.addexercise.AddExerciseFragment"
        android:label="@string/title_add_exercise"
        tools:layout="@layout/fragment_add_exercise" />

    <fragment
        android:id="@+id/navigation_journal"
        android:name="is.hi.hbvg601.team16.sportdemon.ui.homeactivity.journal.JournalFragment"
        android:label="@string/title_journal"
        tools:layout="@layout/fragment_journal" />
</navigation>