<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

    <EditText
        android:id="@+id/createWorkoutName"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:autofillHints="@string/title"
        android:ems="12"
        android:hint="@string/title"
        android:inputType="text" />

    <EditText
        android:id="@+id/createWorkoutDesc"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/createWorkoutName"
        android:layout_margin="15dp"
        android:autofillHints="@string/description"
        android:ems="12"
        android:hint="@string/description"
        android:inputType="text" />

    <EditText
        android:id="@+id/createWorkoutECRest"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/createWorkoutDesc"
        android:layout_margin="15dp"
        android:autofillHints="@string/ECRest"
        android:ems="12"
        android:hint="@string/ECRest"
        android:inputType="number" />

</RelativeLayout>
