<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

    <TextView
        android:id="@+id/workoutResultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:ems="12"
        android:text="@string/description_of_workout" />

    <TextView
        android:id="@+id/workoutResultPhotoText"
        android:layout_below="@+id/workoutResultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:ems="12"
        android:text="@string/take_photo" />

    <FrameLayout
        android:id="@+id/resultPhotoFrame"
        android:layout_width="720dp"
        android:layout_height="1080dp"
        android:layout_below="@+id/workoutResultPhotoText">

        <ImageView
            android:id="@+id/placeholderPhoto"
            android:layout_width="180dp"
            android:layout_height="270dp"
            android:gravity="center"
            android:layout_gravity="center"
            app:srcCompat="@drawable/outline_camera_24"
            android:contentDescription="@string/photo" />

        <ImageView
            android:id="@+id/takenPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:gravity="center"
            android:layout_gravity="center"
            android:contentDescription="@string/photo" />

    </FrameLayout>

</RelativeLayout>
